--- a/src/styles.css
+++ b/src/styles.css
@@ -6,19 +6,18 @@ body {
   background-image: url("../images/site-bg.jpg");
 }
 
-main{
+main {
   display: flex;
   flex-direction: row;
-  width:100%;
+  width: 100%;
   height: 100%;
 }
 
 .recipe-card {
   display: flex;
   flex-direction: row;
-  width:30%;
-  height:200px;
-  background-image: url("https://spoonacular.com/recipeImages/595736-556x370.jpg");
+  width: 30%;
+  height: 200px;
   margin: 20px 5px 20px 5px;
   box-shadow: 10px 10px 14px 0px #000000;
   border-radius: 5px;
@@ -34,8 +33,8 @@ main{
 }
 
 .ten-spacer {
-  width:10%;
-  height:100%;
+  width: 10%;
+  height: 100%;
 }
 
 nav {
@@ -44,8 +43,6 @@ nav {
   flex-direction: row;
   justify-content: space-around;
   width: 75%;
-  border-left: 4px solid #268AFF;
-  border-right: 4px solid #268AFF;
 }
 
 .welcome {
@@ -57,24 +54,22 @@ nav {
   background-image: url("https://spoonacular.com/recipeImages/595736-556x370.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  box-shadow: 10px 10px 14px 0px #000000;
 }
 
-
-  .welcome:hover {
-    cursor:pointer;
-  }
-
-  .welcome:active {
-    cursor:none;
-  }
-
-.nav-buttons {
-
+.welcome:hover {
+  cursor: pointer;
 }
+
+.welcome:active {
+  cursor: none;
+}
+
+.nav-buttons {}
 
 .nav-popup {
-  width:95%;
-  height:75px;
+  width: 95%;
+  height: 75px;
   background-color: #FD9A28;
   margin: 7px 0px 7px 0px;
 }
@@ -85,7 +80,7 @@ nav {
   animation-fill-mode: forwards;
 }
 
-h1{
+h1 {
   margin-bottom: 0px;
 }
 
@@ -98,24 +93,16 @@ h1{
 }
 
 .menu-box {
-/* used to select all boxes */
+  /* used to select all boxes */
 }
 
-.my-recipes-box {
+.my-recipes-box {}
 
-}
+.all-recipes-box {}
 
-.all-recipes-box {
+.pantry-box {}
 
-}
-
-.pantry-box {
-
-}
-
-.recipes-to-cook-box {
-
-}
+.recipes-to-cook-box {}
 
 .faded {
   animation-duration: 1.5s;
@@ -128,8 +115,11 @@ h1{
   background-color: blue;
   height: 50px;
   display: flex;
-  grid-template-columns: 1fr 7fr;
-  grid-template-rows: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: translucent;
 }
 
 .main-nav {
@@ -147,132 +137,99 @@ h1{
 
 /* Creating the favorite heart on the card */
 .heart {
-  background-color: #FF6665;
-  display: inline-block;
-  opacity: .6;
-  height: 30px;
-  margin: 0 10px;
-  position: relative;
-  top: 0;
-  transform: rotate(-45deg);
-  width: 30px;
+  background-image: url('../images/heart-active.png');
 }
 
-.heart:before,
-.heart:after {
-  content: "";
-  background-color: #FF6665;
-  border-radius: 50%;
-  height: 30px;
-  position: absolute;
-  width: 30px;
+.plus {
+  background-image: url("../images/Plus_symbol.png");
 }
 
-.heart:before {
-  top: -15px;
-  left: 0;
+.plus, .heart {
+  height: 50px;
+  width: 50px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.6;
 }
 
-.heart:after {
-  left: 15px;
-  top: 0;
-}
-
-.heart:hover,
-.heart:hover:before,
-.heart:hover:after {
-  background-color: red;
+.heart:hover, .plus:hover {
   opacity: 1;
   cursor: pointer;
 }
 
 .button-arrangement {
-  width:20%;
+  width: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
 }
 
-.plus {
-  height: 50px;
-  width: 50px;
-  background-image: url("../images/Plus_symbol.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: translucent;
+.card {
+  width: 90%;
 }
 
-.plus:hover {
-cursor: pointer;
-}
+@keyframes button-slide {
+  from {
+    margin-right: 100%;
+    width: 300%;
+  }
 
-  @keyframes button-slide {
-    from {
-      margin-right: 100%;
-      width: 300%;
-    }
-
-    to {
-      /* position: relative;
+  to {
+    /* position: relative;
       top: 40px; */
-      margin-right: 0%;
-      width: 100%;
-    }
+    margin-right: 0%;
+    width: 100%;
+  }
+}
+
+@keyframes fade-out {
+  0% {}
+
+  25% {
+    opacity: 0;
   }
 
+  100% {
+    opacity: 0;
+  }
+}
 
-  @keyframes fade-out {
-    0% {
+@keyframes nav-animation {
+  0% {}
 
-    }
-
-    25%{
-      opacity: 0;
-    }
-
-    100% {
-      opacity: 0;
-    }
+  25% {
+    border-right: rgba(0, 0, 0, 0.0);
+    border-left: rgba(0, 0, 0, 0.0);
+    width: 75%;
+    opacity: 0;
   }
 
-  @keyframes nav-animation {
-    0% {
-
-    }
-
-    25% {
-      border-right: rgba(0,0,0,0.0);
-      border-left: rgba(0,0,0,0.0);
-      width: 75%;
-      opacity: 0;
-    }
-
-    80% {
-      position: fixed;
-      left: 0;
-      top: 0;
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: space-around;
-      align-items: space-around;
-      width: 0%;
-      border-left: rgba(0,0,0,0.0);
-      border-right: rgba(0,0,0,0.0);
-      opacity: 0;
-    }
-
-    100% {
-      position: fixed;
-      left: 0;
-      top: 0;
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-      width: 10%;
-      background-color: #268AFF;
-    }
+  80% {
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: space-around;
+    width: 0%;
+    border-left: rgba(0, 0, 0, 0.0);
+    border-right: rgba(0, 0, 0, 0.0);
+    opacity: 0;
   }
+
+  100% {
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 10%;
+    background-color: #268AFF;
+  }
+}
