--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,9 @@ nav {
   background-repeat: no-repeat;
 }
 
+.tag {
+  /* display: none; */
+}
 
   .welcome:hover {
     cursor:pointer;
@@ -74,7 +77,7 @@ nav {
 
 .nav-popup {
   width:95%;
-  height:75px;
+  height:7%;
   background-color: #FD9A28;
   margin: 7px 0px 7px 0px;
 }
@@ -206,15 +209,12 @@ cursor: pointer;
 
   @keyframes button-slide {
     from {
-      margin-right: 100%;
-      width: 300%;
+    position: relative;
+    left: -100px;
     }
 
     to {
-      /* position: relative;
-      top: 40px; */
-      margin-right: 0%;
-      width: 100%;
+
     }
   }
 
