--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,7 @@ nav {
   cursor: none;
 }
 
+
 .nav-buttons {}
 
 .nav-popup {
@@ -74,6 +75,7 @@ nav {
   margin: 7px 0px 7px 0px;
 }
 
+.filter-area,
 .popup-animate {
   animation-name: button-slide;
   animation-duration: 1s;
@@ -133,6 +135,14 @@ h1 {
   justify-content: flex-start;
   width: 10%;
   background-color: #268AFF;
+}
+
+.filter-area {
+  background-color: white;
+  width: 90%;
+  height: 54%;
+  margin-top: 27%;
+  /* position:fixed; */
 }
 
 /* Creating the favorite heart on the card */
