--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
   flex-direction: column;
   align-items: center;
   font-family: 'Prata', serif;
-  background-image: url("../images/site-bg.jpg");
+  background: linear-gradient(rgba(0, 0, 0, .15), rgba(0, 0, 0, .15)), url("../images/site-bg.jpg");
 }
 
 main {
@@ -48,13 +48,13 @@ nav {
 .welcome {
   width: 27%;
   height: 200px;
-  background-color: #268AFF;
+  background-color: #559A3A;
   margin: 5% 4% 5% 4%;
-  border-radius: 2%;
+  border-radius: 5%;
   background-image: url("https://spoonacular.com/recipeImages/595736-556x370.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  box-shadow: 10px 10px 14px 0px #000000;
+  box-shadow: 15px 15px 35px 0px rgba(0,0,0,0.6) ;
 }
 
 .welcome:hover {
@@ -71,7 +71,7 @@ nav {
 .nav-popup {
   width:95%;
   height:7%;
-  background-color: #FD9A28;
+  background-color: #559A3A;
   margin: 7px 0px 7px 0px;
 }
 
@@ -91,7 +91,7 @@ h1 {
   display: flex;
   justify-content: center;
   color: white;
-  background-color: #FD9A28;
+  background-color: #559A3A;
 }
 
 .menu-box {
@@ -112,17 +112,16 @@ h1 {
   animation-fill-mode: forwards;
 }
 
-.recipes {
+/* .recipes {
   width: 50px;
   background-color: blue;
   height: 50px;
-  display: flex;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
   background-color: translucent;
-}
+} */
 
 .main-nav {
   position: fixed;
@@ -140,9 +139,9 @@ h1 {
 .filter-area {
   background-color: white;
   width: 90%;
-  height: 54%;
+  height: 50%;
   margin-top: 27%;
-  /* position:fixed; */
+  
 }
 
 /* Creating the favorite heart on the card */
