--- a/src/styles.css
+++ b/src/styles.css
@@ -69,8 +69,13 @@ h4, ul, li {
   width: 30%;
   height: 200px;
   margin: 20px 5px 20px 5px;
-  box-shadow: 10px 10px 14px 0px #000000;
+  box-shadow: 15px 15px 35px 0px rgba(0, 0, 0, 0.6);
   border-radius: 5px;
+  outline:none;
+}
+
+.recipe-card:hover {
+  cursor: zoom-in;
 }
 
 .recipe-info {
@@ -83,6 +88,14 @@ h4, ul, li {
   border-radius: 5px;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.card-text {
+  width:85%;
+  background-color: white;
+  opacity: 0.8;
+  font-size: 30px;
+  border-radius: 5%;
 }
 
 .card-display {
